k8s-datacenter/test/training/ci-cd-demos/lamp/ingress-nginx/host-http.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: lamp-ingress
  namespace: ci-cd-demos
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
    - host: frd.lamp.example.com
      http:
        paths:
        - path: /
          backend:
            serviceName: lamp-frd
            servicePort: 80
    - host: api.lamp.example.com
      http:
        paths:
        - path: /
          backend:
            serviceName: lamp-api
            servicePort: 80
